edit reading week 12

--- a/website/content/reading/12-reading.Rmd
+++ b/website/content/reading/12-reading.Rmd
@@ -18,9 +18,10 @@ We will be developing a website using rmarkdown's site generator. Please read:
 
 - For a helpful tutorial on creating a website using rmarkdown, see: [Creating websites in R](https://www.emilyzabor.com/tutorials/rmarkdown_websites_tutorial.html), Emily C. Zabor   
   
-- For more advanced website creation using **blogdown** and the website generators **Hugo** and **Jeckyll** see 
+- For more advanced static website creation using **blogdown** and the website generators **Hugo** and **Jeckyll** see 
 
 - [Creating websites with R Markdown](https://bookdown.org/yihui/blogdown/), by Yihui Xie, Amber Thomas, Alison Presmanes Hill. [Appendix B](https://bookdown.org/yihui/blogdown/website-basics.html#website-basics) presents basic information about websites, such as HTML, CSS, and JavaScript.
  
-- [Hugo](https://gohugo.io/)
+- [Hugo](https://gohugo.io/) -- can explore themes and operate with them using `blogdown`.
+
 
